# discord-reminder-bot

./: .gitignore  db_operator.py  discord_commands.yaml  make_lambda_layer.sh  mypy.ini  pyproject.toml  register_commands.py  server.py  test_request.json  throw_reminder.py
.github/workflows/: ci.yml
src/: db_operator.py  server.py  set_reminder.py  throw_reminder.py
